add some float tests